--- a/loading.html
+++ b/loading.html
@@ -3,7 +3,7 @@
 
 <head>
     <meta charset="UTF-8">
-    <meta http-equiv="refresh" content="3;url=akahandmade.html">
+    <meta http-equiv="refresh" content="3;url=website.html">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>loading...</title>
     <link rel="icon" href="profile.jpg">
