--- a/website.html
+++ b/website.html
@@ -6289,6 +6289,9 @@
                     <div class="carousel-inner">
                       <p id="perc">-15%</p>
                       <div class="carousel-item active">
+                     <div class="swipe">
+                              <p>&nbsp;swipe for more <img src="icons8-drag-left.gif" alt="swipe"> </p>
+                            </div>
                         <img src="IMG-20220405-WA0109.jpg" class="card-img" alt="BACK BAG (BLACK)">
                       </div>
                       <div class="carousel-item">
