--- a/website.html
+++ b/website.html
@@ -168,16 +168,16 @@
                   <div class="swipe">
                   <p>&nbsp;swipe for more <img src="icons8-drag-left.gif" alt="swipe"> </p>
                   </div>
-                  <img src="IMG-20220705-WA0000.jpg" class="card-img" alt="CROSS BAG">
+                  <img src="IMG-20220705-WA0000.jpg" class="card-img" class="d-block w-100" alt="CROSS BAG">
                 </div>
                 <div class="carousel-item">
-                  <img src="IMG-20220721-WA0013.jpg" class="card-img" alt="CROSS BAG">
+                  <img src="IMG-20220721-WA0013.jpg" class="card-img" class="d-block w-100" alt="CROSS BAG">
                 </div>
                 <div class="carousel-item">
-                  <img src="IMG-20220721-WA0012.jpg" class="d-block w-100" alt="CROSS BAG">
+                  <img src="IMG-20220721-WA0012.jpg" class="d-block w-100" class="d-block w-100" alt="CROSS BAG">
                 </div>
                 <div class="carousel-item">
-                  <img src="IMG-20220721-WA0015.jpg" class="d-block w-100" alt="Colorful Hand">
+                  <img src="IMG-20220721-WA0015.jpg" class="d-block w-100" class="d-block w-100" alt="Colorful Hand">
                 </div>
               </div>
             </div>
@@ -5959,7 +5959,9 @@
     <!-- Sales -->
 <div class="tab-pane container" id="Sales">
 
-        <h1 class="heads">BLACK FRIDAY <span class="badge bg-black">Sales %</span> </h1>
+<h2 class="heads">There Is No Sale Right Now! </h2>
+
+ <!-- <h1 class="heads">BLACK FRIDAY <span class="badge bg-black">Sales %</span> </h1>
 
 
 
@@ -6380,7 +6382,7 @@
                 </div>
               </div>
             </div>
-          </div>
+          </div> -->
       
         </article>
       </main>
